compiler/actonc/test/typeerrors/actor_self_reserved_loop_var.act
actor Test():
    for self in [1, 2, 3]:
        pass